--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "6.17.0",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
