--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "6.17.0",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
