--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8",
     "prettier": "3.0.3",
     "react-redux": "^8.1.3",
+    "react-select": "^5.8.0",
     "sass": "1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
