feat: добавлен редактор

--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-text-align": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "6.17.0",
