--- a/package.json
+++ b/package.json
@@ -25,41 +25,42 @@
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "next": "14.0.1",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^3.3.1",
-    "react-router-dom": "6.17.0",
-    "sharp": "^0.32.6",
-    "swiper": "^11.0.3"
+    "react-router-dom": "6.20.1",
+    "sharp": "^0.33.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
-    "@typescript-eslint/eslint-plugin": "6.9.0",
-    "@typescript-eslint/parser": "6.9.0",
-    "@vitejs/plugin-react": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "autoprefixer": "^10.4.16",
     "easy-mock-data": "^0.1.1",
-    "editorconfig-checker": "5.1.1",
+    "editorconfig-checker": "5.1.2",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "14.0.4",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.3",
+    "eslint-plugin-react-refresh": "0.4.5",
     "jest": "^29.7.0",
-    "lint-staged": "15.0.2",
+    "lint-staged": "15.2.0",
     "postcss": "^8",
-    "prettier": "3.0.3",
-    "react-redux": "^8.1.3",
+    "prettier": "3.1.1",
+    "react-redux": "^9.0.4",
     "react-select": "^5.8.0",
     "sass": "1.69.5",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5"
   }
 }
