--- a/package.json
+++ b/package.json
@@ -1,63 +1,66 @@
 {
-  "name": "your-kitchen",
-  "version": "1.0.0",
-  "private": true,
-  "author": {
-    "name": "Кирилл Киреев",
-    "email": "kireev.kirill2004@mail.ru",
-    "url": "https://t.me/ker4ik13"
-  },
-  "proxy": "http://locahost:5000/",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tiptap/extension-image": "^2.1.13",
-    "@tiptap/extension-link": "^2.1.13",
-    "@tiptap/extension-text-align": "^2.1.13",
-    "@tiptap/extension-underline": "^2.1.13",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
-    "dotenv": "^16.3.1",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-router-dom": "6.20.1",
-    "sharp": "^0.33.0",
-    "swiper": "^11.0.5"
-  },
-  "devDependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-input-mask": "^3.0.5",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
-    "@vitejs/plugin-react": "4.2.1",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.2",
-    "editorconfig-checker": "5.1.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.5",
-    "jest": "^29.7.0",
-    "lint-staged": "15.2.0",
-    "postcss": "^8",
-    "prettier": "3.1.1",
-    "react-icons": "^4.12.0",
-    "react-input-mask": "^2.0.4",
-    "react-redux": "^9.0.4",
-    "react-select": "^5.8.0",
-    "sass": "1.69.5",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5"
-  }
+	"name": "your-kitchen",
+	"version": "1.0.0",
+	"private": true,
+	"author": {
+		"name": "Кирилл Киреев",
+		"email": "kireev.kirill2004@mail.ru",
+		"url": "https://t.me/ker4ik13"
+	},
+	"proxy": "http://locahost:5000/",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"deadcode-check": "ts-prune"
+	},
+	"dependencies": {
+		"@tiptap/extension-image": "^2.1.13",
+		"@tiptap/extension-link": "^2.1.13",
+		"@tiptap/extension-text-align": "^2.1.13",
+		"@tiptap/extension-underline": "^2.1.13",
+		"@tiptap/pm": "^2.1.13",
+		"@tiptap/react": "^2.1.13",
+		"@tiptap/starter-kit": "^2.1.13",
+		"dotenv": "^16.3.1",
+		"next": "14.0.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.2",
+		"react-router-dom": "6.21.1",
+		"sharp": "^0.33.1",
+		"swiper": "^11.0.5"
+	},
+	"devDependencies": {
+		"@cerner/duplicate-package-checker-webpack-plugin": "^2.6.0",
+		"@headlessui/react": "^1.7.17",
+		"@reduxjs/toolkit": "^2.0.1",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/react-input-mask": "^3.0.5",
+		"@typescript-eslint/eslint-plugin": "6.16.0",
+		"@typescript-eslint/parser": "6.16.0",
+		"@vitejs/plugin-react": "4.2.1",
+		"autoprefixer": "^10.4.16",
+		"axios": "^1.6.2",
+		"editorconfig-checker": "5.1.2",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.4",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.5",
+		"jest": "^29.7.0",
+		"lint-staged": "15.2.0",
+		"postcss": "^8",
+		"prettier": "3.1.1",
+		"react-icons": "^4.12.0",
+		"react-input-mask": "^2.0.4",
+		"react-redux": "^9.0.4",
+		"react-select": "^5.8.0",
+		"sass": "1.69.5",
+		"tailwindcss": "^3.4.0",
+		"ts-prune": "^0.10.3",
+		"typescript": "^5"
+	}
 }
