--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	},
 	"proxy": "http://locahost:5000/",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "cross-env NODE_ENV=development next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "cross-env NODE_ENV=production next start",
 		"lint": "next lint",
 		"deadcode-check": "ts-prune"
 	},
@@ -23,6 +23,7 @@
 		"@tiptap/pm": "^2.1.16",
 		"@tiptap/react": "^2.1.16",
 		"@tiptap/starter-kit": "^2.1.16",
+		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"next": "14.0.4",
 		"react": "^18",
